[package]
name = "typestacean-learn-rust-wasm-from-typescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.2"
dotenv = "0.15.0"
gloo = "0.8.0"
leptos = { version = "0.3.1", features = ["stable"] }
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.63", features = [
    "HtmlInputElement",
    "HtmlDivElement",
    "MediaQueryList",
    'IntersectionObserver',
    'IntersectionObserverInit',
    'IntersectionObserverEntry',
] }
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"

[build-dependencies]
dotenv = "0.15.0"
